--- a/index.html
+++ b/index.html
@@ -17,13 +17,10 @@
        <span>O</span>
     </div>
     <div class="greetings">
-       <span>Y</span>
-       <span>U</span>
-       <span>N</span>
-       <span>I</span>
-       <span>I</span>
        <span>S</span>
-       <span>A</span>
+       <span>E</span>
+       <span>T</span>
+       <span>Y</span>
        <span>A</span>
     </div>
         
