--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
        <span>O</span>
     </div>
     <div class="greetings">
-       <span>B</span>
-       <span>I</span>
-       <span>L</span>
+       <span>D</span>
+       <span>U</span>
+       <span>T</span>
        <span>A</span>
     </div>
         
     </div>
     <div class="description">
-        <span>ono sesuatu ki!! </span>
+        <span>pencet ndut!! </span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">pencet ya</a>
+            <a href="flower.html">pencet kilo</a>
         </button>
 
     </div>
