--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
        <span>O</span>
     </div>
     <div class="greetings">
-       <span>D</span>
-       <span>U</span>
-       <span>T</span>
+       <span>A</span>
+       <span>W</span>
+       <span>A</span>
        <span>A</span>
     </div>
         
